# sphexa

./: CMakeLists.txt  README.md  README_insitu.md
.gitlab/: Dockerfile_hip_2
main/src/: CMakeLists.txt  ascent_adaptor.h  catalyst_adaptor.h
main/src/analytical_solutions/sedov_solution/: CMakeLists.txt
main/src/init/: grid.hpp
main/src/io/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp
main/src/propagator/: CMakeLists.txt  gravity_wrapper.hpp  ipropagator.hpp  nbody.cpp  propagator.h  std_hydro.cpp  std_hydro_grackle.cpp  std_hydro_grackle.hpp  turb_ve_bdt.hpp  ve_hydro.cpp  ve_hydro.hpp  ve_hydro_bdt.cpp  ve_hydro_bdt.hpp
main/src/sphexa/: CMakeLists.txt  sphexa.cpp
main/src/util/: pm_reader.hpp
main/test/: CMakeLists.txt
ryoanji/src/ryoanji/interface/: multipole_holder.cu  multipole_holder.cuh  treebuilder.cuh
ryoanji/src/ryoanji/nbody/: CMakeLists.txt  cartesian_qpole.hpp  ewald.hpp  traversal.cuh  traversal_gpu.cu  traversal_gpu.h  upsweep_gpu.cu
ryoanji/test/: demo.cu  demo_mpi.cpp
ryoanji/test/interface/: global_forces_gpu.cpp
ryoanji/test/nbody/: ewald_cpu.cpp  traversal_cpu.cpp
scripts/: CMakeLists.txt  init_file.py  plot_power.py
sph/include/sph/: CMakeLists.txt  groups.hpp  particles_data.hpp  particles_data_gpu.cuh  sph_gpu.hpp  ts_global.hpp  ts_rungs.hpp  types.hpp
sph/include/sph/hydro_std/: iad_gpu.cu  momentum_energy_gpu.cu
sph/include/sph/hydro_turb/: create_modes.hpp
sph/include/sph/hydro_ve/: av_switches_gpu.cu  iad_divv_curlv_gpu.cu  xmass_gpu.cu  (+2 more)
sph/test/hydro_turb/: CMakeLists.txt  create_modes.cpp  stirring.cpp
